# YT_RAG

./: README.md
backend/: .gitignore  Dockerfile  README.md  data.txt  data.txt.dvc  pyproject.toml  queries.json  setup.py  transcript1.json
backend/.dvc/: config
backend/examples/: basic_completion.py  chain_prompts.py  chat_session.py
backend/src/: Dockerfile  pyproject.toml
backend/src/core/: main.py  transcript_Fv98vtitmiA.json  transcript_Pwgpl9mKars.json  transcript_SxGYPqCgJWM.json  transcript_XUjmWJngk8g.json  transcript_q0AkK8aYbLY.json
backend/src/core/api/chat/: chat_gemini.py  create_notes.py  helpers.py  models.py  notes_router.py  router.py  tools.py
backend/src/core/assistent_prompts/: prompt.py
backend/src/core/database/: db_helpers.py  supabase_client.py
backend/src/core/lib/: auth.py  db.py
backend/src/evals/: collect_data.py  evaluate_multiple_videos.py  make_queries.py  match_queries.py  push_to_db.py
backend/src/yt_rag/: app.py  main.py  processors.py  run_server.py
backend/src/yt_rag/frames/: collect_frames.py  ffmpeg_frame_extraction.py
backend/src/yt_rag/helper/: get_id_from_youtube_url.py
backend/src/yt_rag/llm_service/: cleaningextracted_data.py  gemini_client.py  gemini_with_memory.py  get_groq_client.py  summarize_transcript.py  system_prompt.py
backend/src/yt_rag/rag_prompts/: prompts.py
backend/src/yt_rag/transcript/: chunking.py  fallback_transcript_extraction.py  playwright_scraper.py
backend/src/yt_rag/vector_store/: embeddings.py  fastembed_model.py  pg_vector_helpers.py  pg_vector_operations.py  qdrant_db.py  vector_search.py
frontend/public/: manifest.json
(+6 files in other folders)
