[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagshub>=0.6.3",
    "deepeval>=3.6.6",
    "fastembed>=0.7.1",
    "google-genai>=1.33.0",
    "groq>=0.31.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "kagglehub[hf-datasets,pandas-datasets]>=0.3.13",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.6.6",
    "llama-index>=0.13.3",
    "llama-index-embeddings-clip>=0.5.0",
    "llama-index-multi-modal-llms-openai>=0.6.0",
    "llama-index-vector-stores-lancedb>=0.4.0",
    "mem0ai>=0.1.117",
    "mlflow>=3.3.1",
    "opik>=1.8.33",
    "pinecone>=7.3.0",
    "playwright>=1.55.0",
    "plotly>=6.3.1",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "replicate>=1.0.7",
    "supabase>=2.18.1",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp>=2025.9.23",
]
