[project]
name = "yt-rag-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "fastembed>=0.7.1",
    "google-genai>=1.33.0",
    "groq>=0.31.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "supabase>=2.18.1",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp>=2025.9.26",
]
